--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,4 +1,11 @@
+@import "tailwindcss";
+@import "@nuxt/ui-pro";
+
+@source "../../../layers/ui";
+
 :root {
+
+
     color-scheme: light dark;
 
      /* brand */
@@ -167,6 +174,5 @@ html.light {
 
 }
 body {
-    background-color: var(--background);
-    color: var(--text-strong);
+   
 }
